small fix of spacing

--- a/less/markup.less
+++ b/less/markup.less
@@ -47,7 +47,7 @@ header {
   @media screen and (@midSize) {
     width: 90%;
     margin: 0;
-    padding-left: 2.5rem;
+    padding-left: 2.7rem;
   }
 }
 
